<resources>
    <string name="app_name">Note</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="miscellaneous">miscellaneous</string>
    <string name="pick_color">Pick color</string>
    <string name="pick">Pick</string>
    <string name="add_image">Add image</string>
    <string name="add_url">Add Url</string>
    <string name="enter_url">Enter Url</string>
    <string name="add">Add</string>
    <string name="cancel_dialog">Cancel Dialog</string>
</resources>