<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMiscellaneous"
    android:orientation="vertical"
    android:background="@drawable/background_miscellaneous"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textMiscellaneous"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/miscellaneous"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"/>

    <LinearLayout
        android:id="@+id/layoutNoteColor"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <View
                android:id="@+id/viewColor1"
                android:background="@drawable/background_note_color_1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"/>

            <ImageView
                android:id="@+id/imageColor1"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_done"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <View
                android:id="@+id/viewColor2"
                android:background="@drawable/background_note_color_2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"/>

            <ImageView
                android:id="@+id/imageColor2"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <View
                android:id="@+id/viewColor3"
                android:background="@drawable/background_note_color_3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"/>

            <ImageView
                android:id="@+id/imageColor3"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <View
                android:id="@+id/viewColor4"
                android:background="@drawable/background_note_color_4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"/>

            <ImageView
                android:id="@+id/imageColor4"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <View
                android:id="@+id/viewColor5"
                android:background="@drawable/background_note_color_5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"/>

            <ImageView
                android:id="@+id/imageColor5"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <TextView
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/pick"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddImage"
        android:layout_margin="@dimen/_10sdp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:src="@drawable/ic_image"
            android:contentDescription="@string/app_name"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            app:tint="@color/colorIcon" />

        <TextView
            android:layout_marginStart="@dimen/_15sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="@dimen/_15sdp"
            android:includeFontPadding="false"
            android:text="@string/add_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorIcon"
            android:layout_marginLeft="@dimen/_15sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddUrl"
        android:layout_margin="@dimen/_10sdp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:src="@drawable/ic_web_link"
            android:contentDescription="@string/app_name"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            app:tint="@color/colorIcon" />

        <TextView
            android:layout_marginStart="@dimen/_15sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="@dimen/_15sdp"
            android:includeFontPadding="false"
            android:text="@string/add_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorIcon"
            android:layout_marginLeft="@dimen/_15sdp" />


    </LinearLayout>

</LinearLayout>