<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">


    <TextView
        android:id="@+id/textMyNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/my_notes"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/textMyNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:src="@drawable/ic_search"
            android:contentDescription="@string/app_name"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            app:tint="@color/colorSearchIcon"/>

        <EditText
            android:id="@+id/inputSearch"
            android:layout_marginStart="@dimen/_12ssp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/search_notes"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_13sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35ssp"
            android:layout_marginLeft="@dimen/_12ssp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/layoutQuickActions"
        app:layout_constraintTop_toBottomOf="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="@dimen/_12sdp" />

    <LinearLayout
        android:id="@+id/layoutQuickActions"
        android:background="@color/colorQuickActionsBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageAddNote"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_add_outline"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            app:tint="@color/colorIcon" />

        <ImageView
            android:id="@+id/imageAddImage"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="@dimen/_15sdp"
            android:src="@drawable/ic_image"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            app:tint="@color/colorIcon"
            android:layout_marginLeft="@dimen/_15sdp" />

        <ImageView
            android:id="@+id/imageAddWebLink"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="@dimen/_15sdp"
            android:src="@drawable/ic_web_link"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            app:tint="@color/colorIcon"
            android:layout_marginLeft="@dimen/_15sdp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageAddNoteMain"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toTopOf="@+id/layoutQuickActions"
        app:layout_constraintTop_toTopOf="@+id/layoutQuickActions"
        app:layout_constraintEnd_toEndOf="@+id/layoutQuickActions"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40ssp"
        app:tint="@color/colorPrimary"
        android:layout_marginRight="@dimen/_30sdp" />

</androidx.constraintlayout.widget.ConstraintLayout>